Added picture and like component

--- a/src/app/github-followers/github-followers.component.css
+++ b/src/app/github-followers/github-followers.component.css
@@ -2,3 +2,13 @@
 .media { 
     margin-bottom: 30px;
 }
+
+img{
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+}
+
+a{
+    padding: 5px;
+}
